[metadata]
name = cybersecurity-log-analyzer
version = 1.0.0
author = Data Analyst
author_email = your.email@example.com
description = A tool to parse, analyze, and detect suspicious patterns in security logs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/cybersecurity-log-analyzer
project_urls =
    Bug Tracker = https://github.com/yourusername/cybersecurity-log-analyzer/issues
    Documentation = https://github.com/yourusername/cybersecurity-log-analyzer
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security
    Topic :: System :: Monitoring
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology

[options]
python_requires = >=3.7
packages = find:
install_requires =
    pandas>=2.0.0
    matplotlib>=3.7.0

[options.packages.find]
where = .
